[metadata]
name = ksef-utils
version = file:VERSION
author = Piotr Przetacznik
author_email = "piotr.przetacznik+ksef@gmail.com",
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pprzetacznik/ksef-utils
keywords =
    invoices
    ksef
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: End Users/Desktop
    Intended Audience :: Customer Service
    License :: Other/Proprietary License
    Programming Language :: Python :: 3.11
license_files =
    LICENSE

[options.entry_points]
console_scripts =
  ksef-utils = ksef_utils.__main__:main

[bdist_wheel]
universal = 0
